--- a/JaguarEngine.vcxproj
+++ b/JaguarEngine.vcxproj
@@ -148,6 +148,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="Collada_Loader\Collada_Loader.h" />
+    <ClInclude Include="Controllers\Asset_Cache.h" />
     <ClInclude Include="Controllers\Jaguar_Engine_Wrapper.h" />
     <ClInclude Include="Libraries\Include\glad\glad.h" />
     <ClInclude Include="Libraries\Include\GLFW\glfw3.h" />
@@ -407,9 +408,12 @@
     <ClCompile Include="Collada_Loader\Collada_Skeleton_Loader.cpp" />
     <ClCompile Include="Collada_Loader\XML_Document_Loader.cpp" />
     <ClCompile Include="Collada_Loader\Collada_Mesh_Loader.cpp" />
+    <ClCompile Include="Controllers\Asset_Cache.cpp" />
+    <ClCompile Include="Controllers\Deletion_Handler.cpp" />
     <ClCompile Include="Libraries\Include\glad\glad.c" />
     <ClCompile Include="Libraries\Include\glm\detail\glm.cpp" />
     <ClCompile Include="Main.cpp" />
+    <ClCompile Include="OpenGL_Handling\Input_Handling.cpp" />
     <ClCompile Include="OpenGL_Handling\Render_Queue.cpp" />
     <ClCompile Include="OpenGL_Handling\Scene.cpp" />
     <ClCompile Include="OpenGL_Handling\Shader.cpp" />
