Got the first skeletal animation working!
Further tests required, but I'm very happy with it so far

Will need to implement basic interpolation and proper delta-time functionality, but the current tests seem very promising

--- a/JaguarEngine.vcxproj.filters
+++ b/JaguarEngine.vcxproj.filters
@@ -833,6 +833,15 @@
     <ClCompile Include="Collada_Loader\Collada_Animation_Loader.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Controllers\Skeletal_Animation_Handling.h">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Controllers\Controller_Handling.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Controllers\Skeletal_Animation_Handling.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <Library Include="Libraries\Lib\OpenGL32.Lib" />
