--- a/JaguarEngine.vcxproj
+++ b/JaguarEngine.vcxproj
@@ -411,7 +411,10 @@
     <ClCompile Include="Collada_Loader\XML_Document_Loader.cpp" />
     <ClCompile Include="Collada_Loader\Collada_Mesh_Loader.cpp" />
     <ClCompile Include="Controllers\Asset_Cache.cpp" />
+    <ClCompile Include="Controllers\Controller_Handling.cpp" />
     <ClCompile Include="Controllers\Deletion_Handler.cpp" />
+    <ClCompile Include="Controllers\Skeletal_Animation_Handling.cpp" />
+    <ClCompile Include="Controllers\Skeletal_Animation_Handling.h" />
     <ClCompile Include="Libraries\Include\glad\glad.c" />
     <ClCompile Include="Libraries\Include\glm\detail\glm.cpp" />
     <ClCompile Include="Main.cpp" />
