--- a/JaguarEngine.vcxproj.filters
+++ b/JaguarEngine.vcxproj.filters
@@ -786,6 +786,9 @@
     <ClInclude Include="OpenGL_Handling\Texture_Uniform_Buffer.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Controllers\Lightmapping.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Collada_Loader\XML_Document_Loader.cpp">
@@ -840,6 +843,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Controllers\Skeletal_Animation_Handling.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Controllers\Lightmapping.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
