Fixed issue when calculating and scaling lightmap light model-matrices
Massively optimised lightmap creation and begun working on lightmap reading/writing

Further work required to test the lightmap saving/loading

--- a/JaguarEngine.vcxproj
+++ b/JaguarEngine.vcxproj
@@ -415,6 +415,7 @@
     <ClCompile Include="Controllers\Asset_Cache.cpp" />
     <ClCompile Include="Controllers\Controller_Handling.cpp" />
     <ClCompile Include="Controllers\Deletion_Handler.cpp" />
+    <ClCompile Include="Controllers\Lightmapper_Write_File.cpp" />
     <ClCompile Include="Controllers\Lightmapping.cpp" />
     <ClCompile Include="Controllers\Skeletal_Animation_Handling.cpp" />
     <ClCompile Include="Controllers\Skeletal_Animation_Handling.h" />
