--- a/JaguarEngine.vcxproj
+++ b/JaguarEngine.vcxproj
@@ -416,9 +416,9 @@
     <ClCompile Include="Controllers\Controller_Handling.cpp" />
     <ClCompile Include="Controllers\Deletion_Handler.cpp" />
     <ClCompile Include="Controllers\Lightmapper_Write_File.cpp" />
-    <ClCompile Include="Controllers\Lightmapping.cpp" />
     <ClCompile Include="Controllers\Skeletal_Animation_Handling.cpp" />
     <ClCompile Include="Controllers\Skeletal_Animation_Handling.h" />
+    <ClCompile Include="Controllers\Updated_Lightmapping.cpp" />
     <ClCompile Include="Libraries\Include\glad\glad.c" />
     <ClCompile Include="Libraries\Include\glm\detail\glm.cpp" />
     <ClCompile Include="Main.cpp" />
@@ -428,6 +428,7 @@
     <ClCompile Include="OpenGL_Handling\Shader.cpp" />
     <ClCompile Include="OpenGL_Handling\Shader_Vertex_Buffer.cpp" />
     <ClCompile Include="OpenGL_Handling\Texture_Uniform_Buffer.cpp" />
+    <ClCompile Include="Test_Game_Loop\Test_Scenes.cpp" />
   </ItemGroup>
   <ItemGroup>
     <Library Include="Libraries\Lib\glfw3.lib" />
