Begun working on bounce-lighting
There are still bugs, seemingly relating to the colour of the bounced light. This might be related to the way I'm reading albedo textures.

It seems to be sampling the lightmap information perfectly well, but not the albedo texture. I'll have to look into this when I get the chance

--- a/JaguarEngine.vcxproj
+++ b/JaguarEngine.vcxproj
@@ -418,7 +418,7 @@
     <ClCompile Include="Controllers\Lightmapper_Write_File.cpp" />
     <ClCompile Include="Controllers\Skeletal_Animation_Handling.cpp" />
     <ClCompile Include="Controllers\Skeletal_Animation_Handling.h" />
-    <ClCompile Include="Controllers\Updated_Lightmapping.cpp" />
+    <ClCompile Include="Controllers\Lightmapping.cpp" />
     <ClCompile Include="Libraries\Include\glad\glad.c" />
     <ClCompile Include="Libraries\Include\glm\detail\glm.cpp" />
     <ClCompile Include="Main.cpp" />
