--- a/JaguarEngine.vcxproj.filters
+++ b/JaguarEngine.vcxproj.filters
@@ -792,6 +792,9 @@
     <ClInclude Include="Controllers\Lightmap_Chart_Rasteriser.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Controllers\Job_System.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Collada_Loader\XML_Document_Loader.cpp">
@@ -855,6 +858,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Controllers\Lightmapping.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Controllers\Job_System.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
