Wrote simple script to flood an enclosed scene with lighting nodes
Slightly increased the reflection coefficient of bounced lighting, looking better already!

Dynamic lighting nodes are looking great so far! Just need to implement some kind of interpolation and smoothing for them

--- a/JaguarEngine.vcxproj
+++ b/JaguarEngine.vcxproj
@@ -571,6 +571,8 @@
     <None Include="Libraries\Include\glm\gtx\vector_angle.inl" />
     <None Include="Libraries\Include\glm\gtx\vector_query.inl" />
     <None Include="Libraries\Include\glm\gtx\wrap.inl" />
+    <None Include="Shaders\Test_Shader.frag" />
+    <None Include="Shaders\Test_Shader.vert" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
