--- a/JaguarEngine.vcxproj
+++ b/JaguarEngine.vcxproj
@@ -152,6 +152,7 @@
   <ItemGroup>
     <ClInclude Include="Collada_Loader\Collada_Loader.h" />
     <ClInclude Include="Controllers\Asset_Cache.h" />
+    <ClInclude Include="Controllers\Cubemap_Reflection_Generation.h" />
     <ClInclude Include="Controllers\Jaguar_Engine_Wrapper.h" />
     <ClInclude Include="Controllers\Job_System.h" />
     <ClInclude Include="Controllers\Lightmapping.h" />
@@ -418,6 +419,7 @@
     <ClCompile Include="Collada_Loader\Collada_Mesh_Loader.cpp" />
     <ClCompile Include="Controllers\Asset_Cache.cpp" />
     <ClCompile Include="Controllers\Controller_Handling.cpp" />
+    <ClCompile Include="Controllers\Cubemap_Reflection_Generation.cpp" />
     <ClCompile Include="Controllers\Deletion_Handler.cpp" />
     <ClCompile Include="Controllers\Job_System.cpp" />
     <ClCompile Include="Controllers\Lightmapper_Write_File.cpp" />
