--- a/JaguarEngine.vcxproj.filters
+++ b/JaguarEngine.vcxproj.filters
@@ -795,6 +795,9 @@
     <ClInclude Include="Controllers\Job_System.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Controllers\Cubemap_Reflection_Generation.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Collada_Loader\XML_Document_Loader.cpp">
@@ -861,6 +864,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Controllers\Job_System.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Controllers\Cubemap_Reflection_Generation.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
